--- a/src/assets/chatbot-view.css
+++ b/src/assets/chatbot-view.css
@@ -2681,6 +2681,8 @@ html.keyboard-open .panel-footer {
   flex: 1 1 1;
   min-width: 0;
   width: auto;
+  margin-left: 4px;
+  margin-right: 4px;
 }
 .panel-footer .btn-send { 
   width:44px; 
