--- a/src/assets/chatbot-view.css
+++ b/src/assets/chatbot-view.css
@@ -2684,6 +2684,13 @@ html.keyboard-open .panel-footer {
   margin-left: 4px;
   margin-right: 4px;
 }
+
+.mic-toggle-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
 .panel-footer .btn-send { 
   width:44px; 
   height:44px; 
